logs/seila.log
[  0%] Building CXX object scratch/CMakeFiles/scratch_test_4wifi_heard.dir/test_4wifi_heard.cc.o
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/scratch/test_4wifi_heard.cc: In function ‘int main(int, char**)’:
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/scratch/test_4wifi_heard.cc:290:12: warning: unused variable ‘centerOffset’ [-Wunused-variable]
  290 |     double centerOffset = spacing * 0.5;
      |            ^~~~~~~~~~~~
In file included from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/core/model/attribute.h:22,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/core/model/attribute-accessor-helper.h:22,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/core/model/attribute-helper.h:23,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/build/include/ns3/attribute-helper.h:1,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/network/model/address.h:25,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/build/include/ns3/address.h:1,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/applications/helper/bulk-send-helper.h:25,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/build/include/ns3/bulk-send-helper.h:1,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/build/include/ns3/applications-module.h:6,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/scratch/test_4wifi_heard.cc:2:
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/core/model/ptr.h: In instantiation of ‘ns3::Ptr<T>::Ptr(const ns3::Ptr<U>&) [with U = ns3::Ipv6; T = ns3::Node]’:
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/scratch/test_4wifi_heard.cc:371:51:   required from here
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/core/model/ptr.h:713:24: error: cannot convert ‘ns3::Ipv6*’ to ‘ns3::Node*’ in initialization
  713 |     : m_ptr(PeekPointer(o))
      |             ~~~~~~~~~~~^~~
      |                        |
      |                        ns3::Ipv6*
gmake[3]: *** [scratch/CMakeFiles/scratch_test_4wifi_heard.dir/build.make:78: scratch/CMakeFiles/scratch_test_4wifi_heard.dir/test_4wifi_heard.cc.o] Erro 1
gmake[2]: *** [CMakeFiles/Makefile2:17663: scratch/CMakeFiles/scratch_test_4wifi_heard.dir/all] Erro 2
gmake[1]: *** [CMakeFiles/Makefile2:17669: scratch/CMakeFiles/scratch_test_4wifi_heard.dir/rule] Erro 2
gmake: *** [Makefile:6004: scratch_test_4wifi_heard] Erro 2

